# auto-worklog

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
scripts/: start.sh
tests/: __init__.py  conftest.py  test_main.py
worklog_automation/: __init__.py  cli.py  main.py
worklog_automation/api/: __init__.py
worklog_automation/api/v1/: __init__.py  router.py
worklog_automation/api/v1/endpoints/: auth.py  meetings.py  projects.py  reports.py  time_entries.py  tracking.py  users.py
worklog_automation/api/v1/schemas/: __init__.py  auth.py
worklog_automation/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
worklog_automation/models/: __init__.py  base.py  meeting.py  project.py  time_entry.py  user.py
worklog_automation/schemas/: meetings.py  tracking.py
