[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worklog-automation"
version = "0.1.0"
description = "AI-friendly worklog management and automation system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["fastapi", "worklog", "automation", "time-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core FastAPI stack
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    
    # Database & ORM
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "aiosqlite>=0.19.0",  # SQLite async driver for development
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Background tasks & Scheduling
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    
    # External integrations
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    
    # Data processing & validation
    "pydantic[email]>=2.4.0",
    "python-dateutil>=2.8.0",
    "pendulum>=2.1.0",  # Better datetime handling
    
    # Monitoring & Logging
    "loguru>=0.7.0",
    "prometheus-client>=0.17.0",
    "sentry-sdk[fastapi]>=1.32.0",
    
    # Development & Documentation
    "rich>=13.0.0",  # Beautiful console output
    "typer>=0.9.0",  # CLI commands
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "factory-boy>=3.3.0",
    
    # Code quality
    "ruff>=0.1.0",  # Linting & formatting
    "mypy>=1.5.0",  # Type checking
    "pre-commit>=3.4.0",
    
    # Development tools
    "watchfiles>=0.20.0",
    "ipython>=8.15.0",
]
prod = [
    "gunicorn>=21.2.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.scripts]
worklog = "worklog_automation.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PIE", "SIM", "RET"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.isort]
known-first-party = ["worklog_automation"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=worklog_automation --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["worklog_automation"]
omit = ["*/tests/*", "*/migrations/*"]

